tests/error/error21.jan
// error21: Usage of an integer, which is not defined inside a loop statement

x -> y;

from 0 < 1 do
  z += x
loop
  skip
until 1 < 0
